--- a/tpreact/src/index.css
+++ b/tpreact/src/index.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lisu+Bosa:wght@200&display=swap');
+
 body {
+  background-image: url("/public/background.png");
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -13,9 +16,41 @@ code {
 }
 
 .nav {
-  background-color: rgba(195, 0, 255, 0.534);
-  display: flex;
-  margin: 0;
-  height: 50px;
+  background-color: rgba(195, 0, 255, 0.7);
   border-radius: 10px;
+  display: flex;
+  height: 70px;
+  justify-content: space-around;
+}
+
+.logo {
+  font-size: xx-large;
+  font-family: 'Lisu Bosa', serif;
+  padding: 15px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  text-decoration: none;
+  color: white;
+  align-self: center;
+}
+
+.about {
+  font-family: 'Lisu Bosa', serif;
+  font-size: x-large;
+  display: flex;
+  justify-content: space-around;
+  width: 22vw;
+  align-content: center;
+  align-self: center;
+  list-style: none;
+}
+
+.abo{
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+.footer{
+  background-color: rgba(195, 0, 255, 0.7);
+  display: flex;
 }
