--- a/tpreact/src/index.css
+++ b/tpreact/src/index.css
@@ -54,3 +54,16 @@ code {
   background-color: rgba(195, 0, 255, 0.7);
   display: flex;
 }
+
+.cont {
+  background-color: rgba(195, 0, 255, 0.7);
+  margin: 30px;
+  border-radius: 10px;
+  display: flex;
+  height: 70px;
+}
+
+.card {
+  display: grid;
+  
+}
