--- a/tpreact/src/index.css
+++ b/tpreact/src/index.css
@@ -16,10 +16,10 @@ code {
 }
 
 .nav {
-  background-color: rgba(195, 0, 255, 0.7);
+  background-color: rgba(54, 34, 58, 0.986);
   border-radius: 10px;
   display: flex;
-  height: 70px;
+  height: 80px;
   justify-content: space-around;
 }
 
@@ -56,14 +56,33 @@ code {
 }
 
 .cont {
-  background-color: rgba(195, 0, 255, 0.7);
+  background-color: rgba(139, 44, 168, 0.74);
   margin: 30px;
+  margin-left: 150px;
+  margin-right: 150px;
   border-radius: 10px;
   display: flex;
-  height: 70px;
+  flex-direction: column;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .card {
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  border-radius: 10px;
+  background-color: rgb(170, 155, 72);
+  padding: 10px;
+  margin: 30px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.img {
+  border-radius: 10px;
+  grid-column: 1;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+p{
+  grid-column: 2;
   
 }
