--- a/tpreact/src/index.css
+++ b/tpreact/src/index.css
@@ -3,16 +3,6 @@
 body {
   background-image: url("/public/background.png");
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
 
 .nav {
@@ -97,6 +87,8 @@ code {
 }
 
 .img {
+  max-width: 340px;
+  max-height: 240;
   border-radius: 10px;
   grid-column: 1;
   grid-row: 1;
@@ -177,4 +169,54 @@ p{
 .li.ver::before{
   background-image: url('/public/vercel.png');
   background-size: cover;
+}
+
+@media (max-width: 1044px) {
+  .logo {
+    font-size: x-large;
+  }
+
+  .about {
+    font-size: large;
+  }
+
+  .abo{
+    padding: 10px;
+  }
+
+  .cont {
+    margin-left: 13px;
+    margin-right: 13px;
+  }
+
+  .card {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    margin: 20px;
+  }
+
+  .img {
+    justify-self: center;
+    max-width: 70%;
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover
+  }
+
+  h1{
+    justify-self: center;
+    grid-row: 2;
+    grid-column: 1;
+  }
+
+  p{
+    justify-self: center;
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .lista {
+    justify-self: center;
+    margin-left: 0px;
+  }
 }
